[package]
name = "host-tester-legacy-runtime"
version = "2.0.0"
edition = "2018"

[dependencies]
serde = { version = "1.0.101", optional = true, features = ["derive"] }
safe-mix = { version = "1.0.0", default-features = false }
codec = { package = "parity-scale-codec", version = "1.0.0", default-features = false, features = ["derive"] }
rstd = { package = "sr-std", git = "https://github.com/paritytech/substrate", rev = "c37bb08", default_features = false }
runtime-io = { package = "sr-io", git = "https://github.com/paritytech/substrate", rev = "c37bb08", default_features = false }
version = { package = "sr-version", git = "https://github.com/paritytech/substrate", rev = "c37bb08", default_features = false }
support = { package = "srml-support", git = "https://github.com/paritytech/substrate", rev = "c37bb08", default_features = false }
primitives = { package = "substrate-primitives", git = "https://github.com/paritytech/substrate", rev = "c37bb08", default_features = false }
session-primitive = { package = "substrate-session", git = "https://github.com/paritytech/substrate", rev = "c37bb08", default-features = false }
balances = { package = "srml-balances", git = "https://github.com/paritytech/substrate", rev = "c37bb08", default_features = false }
babe = { package = "srml-babe", git = "https://github.com/paritytech/substrate", rev = "c37bb08", default_features = false }
babe-primitives = { package = "substrate-consensus-babe-primitives", git = "https://github.com/paritytech/substrate", rev = "c37bb08", default_features = false }
grandpa = { package = "srml-grandpa", git = "https://github.com/paritytech/substrate", rev = "c37bb08", default_features = false }
executive = { package = "srml-executive", git = "https://github.com/paritytech/substrate", rev = "c37bb08", default_features = false }
#indices = { package = "srml-indices", git = "https://github.com/paritytech/substrate", rev = "c37bb08", default_features = false }
randomness-collective-flip = { package = "srml-randomness-collective-flip", git = "https://github.com/paritytech/substrate", rev = "c37bb08", default_features = false }
system = { package = "srml-system", git = "https://github.com/paritytech/substrate", rev = "c37bb08", default_features = false }
timestamp = { package = "srml-timestamp", git = "https://github.com/paritytech/substrate", rev = "c37bb08", default_features = false }
sudo = { package = "srml-sudo", git = "https://github.com/paritytech/substrate", rev = "c37bb08", default_features = false }
#transaction-payment = { package = "srml-transaction-payment", git = "https://github.com/paritytech/substrate", rev = "c37bb08", default_features = false }
sr-primitives = { git = "https://github.com/paritytech/substrate", rev = "c37bb08", default_features = false }
client = { package = "substrate-client", git = "https://github.com/paritytech/substrate", rev = "c37bb08", default_features = false }
#offchain-primitives = { package = "substrate-offchain-primitives", git = "https://github.com/paritytech/substrate", rev = "c37bb08", default-features = false }

[build-dependencies]
wasm-builder-runner = { package = "substrate-wasm-builder-runner", version = "1.0.4" }

[features]
default = ["std"]
std = [
	"codec/std",
	"client/std",
	"rstd/std",
	"runtime-io/std",
	"support/std",
	"balances/std",
	"babe/std",
	"babe-primitives/std",
	"grandpa/std",
	"executive/std",
#	"indices/std",
	"primitives/std",
	"sr-primitives/std",
	"randomness-collective-flip/std",
	"system/std",
	"timestamp/std",
	"sudo/std",
#	"transaction-payment/std",
	"version/std",
	"serde",
	"safe-mix/std",
#	"offchain-primitives/std",
#	"substrate-session/std",
]
