[package]
name = 'host-tester-runtime'
version = '2.0.0-alpha.5'
edition = '2018'

[dependencies.balances]
default-features = false
package = 'pallet-balances'
version = '2.0.0-alpha.5'

[dependencies.codec]
default-features = false
features = ['derive']
package = 'parity-scale-codec'
version = '1.2.0'

[dependencies.frame-executive]
default-features = false
version = '2.0.0-alpha.5'

[dependencies.frame-support]
default-features = false
version = '2.0.0-alpha.5'

[dependencies.randomness-collective-flip]
default-features = false
package = 'pallet-randomness-collective-flip'
version = '2.0.0-alpha.5'

[dependencies.serde]
features = ['derive']
optional = true
version = '1.0.101'

[dependencies.sp-api]
default-features = false
version = '2.0.0-alpha.5'

[dependencies.sp-block-builder]
default-features = false
version = '2.0.0-alpha.5'

[dependencies.sp-core]
default-features = false
version = '2.0.0-alpha.5'

[dependencies.sp-inherents]
default-features = false
version = '2.0.0-alpha.5'

[dependencies.sp-io]
default-features = false
version = '2.0.0-alpha.5'

[dependencies.sp-runtime]
default-features = false
version = '2.0.0-alpha.5'

[dependencies.sp-std]
default-features = false
version = '2.0.0-alpha.5'

[dependencies.sp-transaction-pool]
default-features = false
version = '2.0.0-alpha.5'

[dependencies.sp-version]
default-features = false
version = '2.0.0-alpha.5'

[dependencies.sudo]
default-features = false
package = 'pallet-sudo'
version = '2.0.0-alpha.5'

[dependencies.system]
default-features = false
package = 'frame-system'
version = '2.0.0-alpha.5'


[build-dependencies.wasm-builder-runner]
package = 'substrate-wasm-builder-runner'
version = '1.0.5'


[features]
default = ['std']
std = [
    'balances/std',
    'codec/std',
    'frame-executive/std',
    'frame-support/std',
    'randomness-collective-flip/std',
    'serde',
    'sp-api/std',
    'sp-block-builder/std',
    'sp-core/std',
    'sp-inherents/std',
    'sp-io/std',
    'sp-runtime/std',
    'sp-std/std',
    'sp-transaction-pool/std',
    'sp-version/std',
    'sudo/std',
    'system/std',
]
