[package]
name = 'host-tester-runtime'
version = '2.0.0-alpha.7'
edition = '2018'

[profile.release]
panic = 'unwind'


[dependencies.hex]
version = '0.4.2'
default-features = false


# Base dependencies
[dependencies.serde]
features = ['derive']
optional = true
version = '1.0.101'

[dependencies.codec]
default-features = false
features = ['derive']
package = 'parity-scale-codec'
version = '1.2.0'


# Substrate FRAME is the basis
[dependencies.frame-executive]
version = '2.0.0-alpha'
default-features = false

[dependencies.frame-support]
version = '2.0.0-alpha'
default-features = false


# Substrate pallet to provide runtime basics
[dependencies.system]
package = 'frame-system'
version = '2.0.0-alpha'
default-features = false

[dependencies.collective-flip]
package = 'pallet-randomness-collective-flip'
version = '2.0.0-alpha'
default-features = false

[dependencies.timestamp]
package = 'pallet-timestamp'
version = '2.0.0-alpha'
default-features = false


# Polkadot consensus and finality
[dependencies.babe]
package = 'pallet-babe'
version = '2.0.0-alpha'
default-features = false

[dependencies.grandpa]
package = 'pallet-grandpa'
version = '2.0.0-alpha'
default-features = false


# TODO Only enabled via feature flag?
[dependencies.balances]
default-features = false
package = 'pallet-balances'
version = '2.0.0-alpha'

# TODO Only enabled via feature flag?
[dependencies.sudo]
package = 'pallet-sudo'
version = '2.0.0-alpha'
default-features = false


# List of required substrate primitives (sp)
[dependencies.sp-api]
version = '2.0.0-alpha'
default-features = false

[dependencies.sp-block-builder]
version = '2.0.0-alpha'
default-features = false

[dependencies.sp-core]
version = '2.0.0-alpha'
default-features = false

[dependencies.sp-inherents]
version = '2.0.0-alpha'
default-features = false

[dependencies.sp-io]
version = '2.0.0-alpha'
default-features = false

[dependencies.sp-runtime]
version = '2.0.0-alpha'
default-features = false

[dependencies.sp-std]
version = '2.0.0-alpha'
default-features = false

[dependencies.sp-transaction-pool]
version = '2.0.0-alpha'
default-features = false

[dependencies.sp-version]
version = '2.0.0-alpha'
default-features = false

[dependencies.sp-session]
version = '2.0.0-alpha'
default-features = false

[dependencies.sp-babe]
package = 'sp-consensus-babe'
version = '0.8.0-alpha'
default-features = false

[dependencies.sp-grandpa]
package = 'sp-finality-grandpa'
version = '2.0.0-alpha'
default-features = false


# TODO: Drop runner, use builder instead with -Zfeatures=build_dep cargo flag
[build-dependencies.wasm-builder-runner]
package = 'substrate-wasm-builder-runner'
version = '1.0.5'


[features]
default = ['std']
# Propagate std flag if set
std = [
    'serde',
    'codec/std',
    'frame-executive/std',
    'frame-support/std',
    'system/std',
    'collective-flip/std',
    'babe/std',
    'grandpa/std',
    'balances/std',
    'sudo/std',
    'sp-api/std',
    'sp-block-builder/std',
    'sp-core/std',
    'sp-inherents/std',
    'sp-io/std',
    'sp-runtime/std',
    'sp-std/std',
    'sp-transaction-pool/std',
    'sp-version/std',
    'sp-session/std',
    'sp-babe/std',
    'sp-grandpa/std',
]
