[package]
authors = ['Substrate DevHub <https://github.com/substrate-developer-hub>']
build = 'build.rs'
edition = '2018'
name = 'factory'
version = '2.0.0'

[lib]
name = 'factory'
path = 'src/lib.rs'

[[bin]]
name = 'factory'
path = 'src/bin/main.rs'

[package.metadata.docs.rs]
targets = ['x86_64-unknown-linux-gnu']

[build-dependencies]
substrate-build-script-utils = '2.0.0'

[dependencies]
jsonrpc-core = '15.0.0'
structopt = '0.3.8'
serde = { features = ['derive'], optional = true, version = "1.0.117" }
serde_json = '1.0.59'
hex = '0.4.2'
failure = "0.1.8"
codec = { package = "parity-scale-codec", version = "1.3.1" }
rand = "0.7.3"
serde_yaml = "0.8.14"

# local dependencies
factory-runtime = { path = '../runtime', version = '2.0.0' }

# Substrate dependencies
frame-benchmarking = '2.0.0'
frame-benchmarking-cli = '2.0.0'
frame-system = "2.0.0"
pallet-balances = '2.0.0'
pallet-transaction-payment-rpc = '2.0.0'
pallet-transaction-payment = "2.0.0"
pallet-timestamp = "2.0.0"
sc-basic-authorship = '0.8.0'
sc-cli = { features = ['wasmtime'], version = '0.8.0' }
sc-client-api = '2.0.0'
sc-consensus = '0.8.0'
sc-consensus-aura = '0.8.0'
sc-executor = { features = ['wasmtime'], version = '0.8.0' }
sc-finality-grandpa = '0.8.0'
sc-rpc = '2.0.0'
sc-rpc-api = '0.8.0'
sc-service = { features = ['wasmtime', 'test-helpers'], version = '0.8.0' }
sc-transaction-pool = '2.0.0'
sp-api = '2.0.0'
sp-block-builder = '2.0.0'
sp-blockchain = '2.0.0'
sp-consensus = '0.8.0'
sp-consensus-aura = '0.8.0'
sp-core = '2.0.0'
sp-finality-grandpa = '2.0.0'
sp-inherents = '2.0.0'
sp-runtime = '2.0.0'
sp-transaction-pool = '2.0.0'
sp-io = "2.0.0"
sp-storage = "2.0.0"
sp-state-machine = "0.8.0"
substrate-frame-rpc-system = '2.0.0'

[features]
default = ['serde']
runtime-benchmarks = ['factory-runtime/runtime-benchmarks']
